--- a/hw9b/views/index.html
+++ b/hw9b/views/index.html
@@ -1,5 +1,15 @@
-const Account = require('./accounting');
-
-const myAccount = new Account("Jeff");
-myAccount.credit(150);
-console.log(myAccount.describe());
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Greg's HW9b</title>
+  <link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+  <h1>Greg's Web Assignment Solution</h1>
+  <h2>Links:</h2>
+  <a href="/ex1">Exercise 1 – Order / Process a Form</a><br>
+  <a href="/ex2">Exercise 2 – Send JSON to API</a><br>
+  <a href="/ex3">Exercise 3 – Articles / Process a Form</a><br>
+</body>
+</html>
