--- a/hw9b/views/ex2.html
+++ b/hw9b/views/ex2.html
@@ -1,5 +1,15 @@
-const Account = require('./accounting');
-
-const myAccount = new Account("Jeff");
-myAccount.credit(150);
-console.log(myAccount.describe());
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Exercise 2 – JSON API</title>
+  <link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+  <a href="/">Link to Start Page</a>
+  <h2>Asher's Countries API Call</h2>
+  <button id="callApi">Call API</button>
+  <p id="response"></p>
+  <script src="/ex2.js"></script>
+</body>
+</html>
